Fixed navbar alignment. Need to pick background color

--- a/src/App.css
+++ b/src/App.css
@@ -21,17 +21,22 @@
 
 .navbar {
   display: flex;
+  justify-content: center;
 }
 
-.navbar > ul  {
+.navbar > li {
   width: 100px;
   margin: 50px;
   text-align: center;
   flex-direction: column;
+  color: black;
 }
 
 /*Removing the underline from all of the links.*/
-a, a.visited, a.hover, a.active { text-decoration: none;}
+a, a.visited, a.hover, a.active {
+  text-decoration: none;
+  color: black;
+}
 
 /*Removing bullet points from lists*/
 li {list-style: none;}
